<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/frragmentShoping">

    <fragment
        android:id="@+id/frragmentShoping"
        android:name="com.example.shopinglisttesting.ui.fragments.FragmentShopping"
        android:label="fragment_frragment_shoping"
        tools:layout="@layout/fragment_shoping" >
        <action
            android:id="@+id/action_frragmentShoping_to_addShoppingItemsFragment"
            app:destination="@id/addShoppingItemsFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageFragment"
        android:name="com.example.shopinglisttesting.ui.fragments.ImageFragment"
        android:label="fragment_image"
        tools:layout="@layout/fragment_image" />
    <fragment
        android:id="@+id/addShoppingItemsFragment"
        android:name="com.example.shopinglisttesting.ui.fragments.AddShoppingItemsFragment"
        android:label="fragment_add_shopping_items"
        tools:layout="@layout/fragment_add_shopping_items" >
        <action
            android:id="@+id/action_addShoppingItemsFragment_to_imageFragment"
            app:destination="@id/imageFragment" />
    </fragment>
</navigation>